Perfection and Correction

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p style="text-align:center">
 
             <a class="PLine ParagraphTitle">ALLES GUTE FÜR DICH</a><br /><br />
-            <a style="" class="ParagraphContent">Hey Lisa ich wollte dir mal sagen wie gern ich dich hab und welcher bessere Tag als dein Geburtstag dafür! Als du in Japan warst haben wir uns ja leider ein wenig zestritten weil ich eifersüchtig wurde (wegen eines Clash turniers of all things) dafür will ich mich als erstes entschuldigen. ES TUT MIR VON HERZEN LEID! So with that out of the way hier sind ein paar Sachen die ich an dir sehr schätze: 1.Du bist sehr bodenständig und siehst dich selten als was besseres an. 2.Du ziehst Vorhaben auch mal durch und redest nicht nur davon (E.g. Japan). 3. Das allerwichtigste an dir ist du bist einfach du und lässt dich nicht von anderen in ein Verhaltensmuster zwängen und traust dich auch mal deine Meinung zu sagen! <br /><br /> Ich weis das ist ine bisschen cringe deswegen scroll einfach schnell weiter für mein Geschenk</a>
+            <a style="" class="ParagraphContent">Hey Lisa ich wollte dir mal sagen wie gern ich dich hab und welcher Tag ist besser als dein Geburtstag dafür! Als du in Japan warst haben wir uns ja leider ein wenig zestritten, weil ich eifersüchtig wurde (wegen eines Clash-Turniers of all things) und dafür will ich mich als Erstes entschuldigen. ES TUT MIR VON HERZEN LEID! So with that out of the way, hier sind ein paar Sachen die ich an dir sehr schätze: 1.Du bist sehr bodenständig und siehst dich selten als was Besseres an. 2.Du ziehst Vorhaben auch mal durch und redest nicht nur davon (E.g. Japan). 3. Das Allerwichtigste an dir ist du bist einfach du und lässt dich nicht von anderen in ein Verhaltensmuster zwängen und traust dich auch mal deine Meinung zu sagen! <br /><br /> Ich weis das ist ein bisschen cringe deswegen scroll einfach schnell weiter für mein super überraschendes und unerwartetes Geschenk!</a>
         </p>
 
     </div>
@@ -38,7 +38,7 @@
     <p style="text-align:center">
 
         <a class="PLine ParagraphTitle">Convention-Gutschein!</a><br /><br />
-        <a style="" class="ParagraphContent">Das hier ist mein Geschenk an dich auch wenn mündliche / selbstgemachte Gutscheine immer doof sind dachte ich mir dass ist die beste möglichkeit in der derzeitigen Situation. Die Idee ist wie folgt: Wir gehen auf eine Convention deiner Wahl und ich mache den ganzen Tag lang was auch immer du willst (auch wenn du nach 5 min wieder gehen willst). Um Tickets und Anreise kümmere ich mich was aber auch bedeutet du müsstest mir etwas in advance Bescheid sagen!<br /> ╰(*°▽°*)╯ Das wars keine weiteren Haken genieß deinen Geburtstag!</a>
+        <a class="ParagraphContent">Das hier ist mein Geschenk an dich auch wenn mündliche/selbstgemachte Gutscheine immer doof sind hab ich mir gedacht, dass das so die beste Möglichkeit in der derzeitigen Situation. Die Idee ist wie folgt: Wir gehen auf eine Convention deiner Wahl und ich mache den ganzen Tag lang was auch immer du willst (auch wenn du nach 5 min wieder gehen willst). Um Tickets und Anreise kümmere ich mich was aber auch bedeutet du müsstest mir etwas in advance Bescheid sagen!<br /> ╰(*°▽°*)╯ Das wars keine weiteren Haken genieß deinen Geburtstag!</a>
     </p>
 
 </div>
